Bug 168714 - Vertical tabs. Lack of contrast to white background for selected item (in Light Mode)
Summary: Vertical tabs. Lack of contrast to white background for selected item (in Lig...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Vertical-Tab-dialogs
  Show dependency treegraph
 
Reported: 2025-10-06 10:34 UTC by Telesto
Modified: 2025-10-07 05:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (27.79 KB, image/jpeg)
2025-10-06 10:35 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-10-06 10:34:52 UTC
Description:
Vertical tabs. Lack of contrast to white background for selected item

Steps to Reproduce:
1. Open Calc
2. Menu Data -> Sort
3. Select options tab

Actual Results:
Option tab blends with the white background

Expected Results:
Some contrast. Where, no clue:
A) The background of the vertical tabs buttons
B) The background of the area holding the vertical tab buttons
C) Both

I personally not big fan of large white area's. So I have tendency to go for C.
But well it should also deliver nice results in dark-mode


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b1c0c4838d2e006ffa8e72516569ce8d13bdbe01
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2025-10-06 10:35:34 UTC
Created attachment 203159 [details]
Screenshot
Comment 2 Heiko Tietze 2025-10-06 11:36:25 UTC
This has changed for the Notebookbar, which is a classic horizontal toolbar. In this case the white tab merges with the white tab background. But admittedly not for VTs.
Comment 3 Commit Notification 2025-10-07 05:47:41 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4f6a0acad0a05dd33d9ddb2df1d6c6605b52afed

Resolves tdf#168714 - Lack of contrast on vertical tabs

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.