Resolves tdf#168714 - Lack of contrast on vertical tabs

VTs are drawn now like in the past with the accent color while
HTs merge better with the tab content when drawn in
activetabcolor (and some lighten/darken when not selected)

Change-Id: I3e0f8d0b0320de3d65d81c90d5e218dfe44c2956
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191962
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>